# dd-ftm

./: .gitignore  LICENSE  README.md  profile_data.py  profile_sanctions_only.py  pyproject.toml  run_extract.py  run_ipa.py  run_ipa_25k.sh  sanctions_pipeline_overview.md
dd_ftm/: __init__.py
dd_ftm/core/: __init__.py  datasets.py  extract.py  pairs.py  scripts.py
dd_name_ipa/: __init__.py  generate.py  prompt.py
dd_name_ipa/processor/: __init__.py  config.py  impl.py  plugin.py
